--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,7 @@
 
+:root{
+    --red-color:red;
+}
 *{
     padding: 0;
     margin: 0;
@@ -17,47 +20,63 @@ header{
 }
 .header__profile--container{
     display: flex;
-    justify-content: right;
+    justify-content: space-between;
     align-items: center;
     height: 100%;
 }
-.header__profile--balance{
+.header__business--profile{
     display: flex;
     align-items: center;
+    margin-left: 244px;
+    border: 1px solid #f3e1e1;
+    border-radius: 20px;
+    padding: 10px 14px;
 }
-.header__profile--balance p{
+.header__business--profile i{
+    font-size: 24px;
+    color: var(--red-color);
+}
+.header__business--profile div{
+    margin-left: 10px;
+}
+.header__business--profile h2{
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 300;
-    font-size: 20px;
-    line-height: 30px;
-    color: #ffffff;
+    font-size: 14px;
+    line-height: 12px;
+    color: var(--red-color);
 }
-.header__profile--balance span{
+.header__business--profile p{
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 500;
-    font-size: 30px;
-    line-height: 30px;
+    font-size: 12px;
+    line-height: 10px;
     color: #FF7901;
-    margin-left: 10px;
     margin-right: 30px;
+    margin-bottom: 0;
+
 }
 .header__profile--details{
     background: #FFFFFF;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.07);
     border-radius: 45px;
-    min-width: 200px;
-    height: 60px;
-    padding: 10px;
+    padding: 7px 10px;
     display: flex;
     align-items: center;
     position: relative;
+    border: 1px solid #fdd5d5;
 }
 .header__profile--details img{
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     margin-right: 10px;
+}
+.header__profile--details i{
+    color: var(--red-color);
+    font-size: 22px;
+    padding: 0 10px;
 }
 .header__profile--details p{
     font-family: 'Poppins';
@@ -86,15 +105,16 @@ header{
 }
 .profile__menu--container{
     position: absolute;
-    top: 40px;
+    top: 78px;
     background: #FFFFFF;
     border: 1px solid #F2F2F4;
     box-shadow: 0px 30px 20px -20px rgb(198 211 232 / 20%);
     border-radius: 10px;
     list-style: none;
-    width: 200px;
     right: 30px;
     z-index: -1;
+    padding: 0;
+    min-width: 250px;
 }
 .profile__menu--container li{
     font-family: 'Poppins';
@@ -105,8 +125,25 @@ header{
     color: #7D7D7E;
     margin: 20px;
 }
-.profile__menu--container li:first-child{
-    margin-top: 60px !important;
+.profile__menu--container li h2{
+    font-size: 14px;
+    font-weight: 600;
+    color: #000000;
+    margin: 0 0 7px 0;
+}
+.profile__menu--container li p{
+    font-size: 12px;
+    color: rgb(219 162 162);
+    margin-top: -14px;
+    padding: 0;
+    line-height: 40px;
+    font-weight: 100;
+    border-bottom: 1px solid rgb(253 238 238);
+}
+.profile__menu--container li i{
+    font-size: 20px;
+    color: var(--red-color);
+    margin-right: 10px;
 }
 .log__out--menu{
     font-size: 16px !important;
@@ -137,7 +174,7 @@ header{
 }
 .left__menu--items{
     margin-top: 15px;
-    height: calc(100vh - 150px);
+    height: calc(100vh - 105px);
     overflow-y: scroll;
 }
 .each__menu--item{
@@ -145,26 +182,30 @@ header{
     align-items: center;
     justify-content: left;
     cursor: pointer;
-    margin-left: 42px;
     margin-top: 30px;
+}
+.each__menu--item i{
+    color: var(--red-color);
+    font-size: 20px;
 }
 .each__menu--item span{
     font-family: 'Poppins';
+    white-space: nowrap;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
     line-height: 30px;
-    color: #7D7D7E;
-    margin-left: 22px;
+    color: var(--red-color);
+    margin-left: 14px;
 }
 .each__menu--item:hover span{
-    color: #ffffff;
+    color: var(--red-color);
 }
 .each__menu--item:hover svg path{
     fill: #FF7901;
 }
 .menu__item--active span{
-    color: #ffffff;
+    color: var(--red-color);
 }
 .menu__item--active svg path{
     fill: #FF7901;
@@ -178,7 +219,7 @@ header{
     position: absolute;
     right: 0;
 }
-.menu__item--active::after{
+/* .menu__item--active::after{
     content: '';
     display: inline-block;
     height: 29px;
@@ -186,20 +227,22 @@ header{
     background: #FF7901;
     position: absolute;
     right: 0;
-}
+} */
 .dropdown__menu svg:not(:first-child){
-    margin-left: 72px;
+    margin-left: 57px;
 }
 .dropdown__menu--items{
     margin-left: 11px;
+}
+.dropdown__menu--items ul{
+    padding: 0;
 }
 .dropdown__menu--item{
     display: flex;
     align-items: center;
     justify-content: left;
     cursor: pointer;
-    margin-left: 42px;
-    margin-top: 30px;
+    margin-top: 14px;
 }
 .dropdown__menu--item span{
     font-family: 'Poppins';
@@ -219,357 +262,21 @@ header{
 
 /*=======================================*/
 
-.profile__details--container{
-    padding: 120px 30px;
-    background-color: #FCFBFF;
-    height: 100%;
+.content-container{
+    padding-top: 90px;
+    background-color: #ffffff;
+    height: 100vh;
     width: calc(100% - 224px);
     /*width: 100%;*/
     margin-left: 224px;
 }
-.details__card--container{
-    display: flex;
-    background: #f5e8e8;
-    padding: 20px;
-    border-radius: 6px;
-}
-.profile__card{
-    min-width: calc(21% - 15px);
-    height: 334px;
-    background: #FFFFFF;
-    border: 1px solid #F2F2F4;
-    border-radius: 10px;
-    margin-right: 15px;
-    text-align: center;
-    padding: 0 14px;
-}
-.credit__card{
-    min-width: calc(79% - 15px);
-    min-height: 334px;
+.container-layout{
+    background: #f5f5ff;
+    border-radius: 12px 12px 0 0;
     height: 100%;
-    background: #FFFFFF;
-    border: 1px solid #F2F2F4;
-    border-radius: 10px;
-    margin-left: 15px;
-    padding: 30px;
-    position: relative;
+    margin: 0 20px;
+    padding-top: 1px;
 }
-.credit__card h3{
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 30px;
-    color: #26262E;
-    margin-top: 40px;
-}
-.inner__card--container{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-}
-.profile__card img{
-    width: 100px;
-    height: 100px;
-    margin-top: 40px;
-}
-.profile__card--details{
-    margin-top: 15px;
-}
-.profile__card--details h3{
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 38px;
-    color: #26262E;
-}
-.profile__card--details p{
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 20px;
-    color: #7D7D7E;
-    margin: 5px;
-}
-.credit__card--one{
-    margin-right: 15px;
-}
-.credit__card--two{
-    margin-left: 15px;
-    margin-right: 15px;
-}
-.credit__card--three{
-    margin-left: 15px;
-}
-.credit__card--one,
-.credit__card--two,
-.credit__card--three{
-    width: calc(33% - 16px);
-    min-height: 154px;
-    background: #FFFFFF;
-    border: 1px solid #F2F2F4;
-    border-radius: 10px;
-    padding: 10px;
-    margin-top: 10px;
-}
-.credit__card--two{
-    border: 1px solid #FF7901 !important;
-}
-.credit__card--one img,
-.credit__card--two img,
-.credit__card--three img{
-    float: right;
-}
-.credit__card--one h4,
-.credit__card--three h4{
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 1vw;
-    line-height: 32px;
-    color: #7D7D7E;
-    margin-top: 20px;
-    margin-left: 20px;
-}
-.credit__card--one p,
-.credit__card--three p{
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 1vw;
-    line-height: 32px;
-    color: #BDBDBD;
-    margin-top: 30px;
-    margin-left: 20px;
-}
-.credit__card--two h4{
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 1vw;
-    line-height: 32px;
-    white-space: nowrap;
-    color: #26262E;
-    margin-top: 20px;
-    margin-left: 20px;
-}
-.credit__card--two p{
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 1vw;
-    line-height: 32px;
-    color: #26262E;
-    margin-top: 30px;
-    margin-left: 20px;
-}
-.profile__update--container{
-    min-height: 659px;
-    height: 100%;
-    width: 100%;
-    background: #FFFFFF;
-    border: 1px solid #F2F2F4;
-    border-radius: 10px;
-    margin-top: 30px;
-    padding-bottom: 50px;
-}
-.update__nav--items{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    list-style: none;
-    margin-left: 130px;
-}
-.update__each--nav{
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 28px;
-    color: #26262E;
-    margin-top: 40px;
-}
-.update__each--nav:not(:last-child){
-    margin-right: 32px;
-}
-.active__update--nav{
-    color: #FF7901 !important;
-    position: relative;
-}
-.active__update--nav::after{
-    content: '';
-    width: 170px;
-    display: block;
-    position: absolute;
-    height: 2px;
-    background: #FF7901;
-    bottom: -10px;
-    left: -9px;
-}
-.custom__hr{
-    width: 100%;
-    height: 2px;
-    display: block;
-    background: #F2F2F4;
-    margin-top: 10px;
-    border: none;
-}
-.notification__tab--container{
-    padding-left: 318px;
-    margin-top: 54px;
-    width: 84%;
-}
-.notification__list{
-    list-style: none;
-}
-/*==========*/
-.switch  {
-    position: relative;
-    display: inline-block;
-    width: 50px;
-    height: 30px;
-    margin: 0 5px 0 5px;
-}
-
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-.slider {
-    position: absolute;
-    cursor: pointer;
-    background-color: #ffffff;
-    border: 1px solid #FF7901;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    border-radius: 1.5rem;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
-
-.slider:before {
-    position: absolute;
-    content: '';
-    background-color: #FF7901;
-    height: 20px;
-    width: 20px;
-    left: 5px;
-    bottom: 4px;
-    border-radius: 50%;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
-input:checked + .slider:before {
-    -webkit-transform: translateX(2.5rem);
-    -ms-transform: translateX(2.5rem);
-    transform: translateX(2.5rem);
-    left: -15px;
-    bottom: 4px;
-}
-input:checked + .slider-1-1 {
-    background-color: #FF7901;
-}
-input:checked + .slider:before {
-    background-color: #ffffff;
-}
-.notification__each--item{
-    display: flex;
-    align-items: center;
-}
-.notification__each--item:not(:first-child){
-    margin-top: 32px;
-}
-.notification__text{
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 32px;
-    color: #26262E;
-    margin-left: 20px;
-}
-.not__checked{
-    color: #7D7D7E;
-}
-.custom__hr--notification{
-    width: 100%;
-    height: 2px;
-    display: block;
-    background: #F2F2F4;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    border: none;
-}
-.input__fields--container{
-    display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
-    margin-left: 55px;
-}
-.mail__input{
-    width: 50%;
-}
-.mail__input p{
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 32px;
-    color: #7D7D7E;
-    margin-bottom: 10px;
-}
-.mail__input p span{
-    color: #FF7901;
-}
-.mail__input input{
-    width: 90%;
-    height: 60px;
-    background: #FFFFFF;
-    border: 1px solid #F2F2F4;
-    border-radius: 10px;
-    padding: 14px 20px;
-    outline: none;
-}
-.mail__input input::placeholder{
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 32px;
-    color: #BDBDBD;
-}
-.mail__input input{
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 32px;
-    color: #26262E;
-}
-.save__btn{
-    padding: 10px 16px;
-    width: 150px;
-    height: 48px;
-    background: #FF7901;
-    box-shadow: 0px 20px 50px rgba(255, 121, 1, 0.3);
-    border-radius: 5px;
-    color: #ffffff;
-    outline: none;
-    border: none;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 28px;
-}
-
 @media (max-width: 1024px) {
     header{
         display: flex;
@@ -601,60 +308,11 @@ input:checked + .slider:before {
     .header__profile--details p{
         font-size: 14px;
     }
-    .details__card--container{
-        flex-wrap: wrap;
-    }
-    .profile__card{
-        width: 100%;
-        margin: 0 0 30px 0;
-    }
-    .credit__card{
-        width: 100%;
-        margin: 0;
-    }
-    .input__fields--container{
-        flex-wrap: wrap;
-    }
-    .mail__input{
-        width: 100%;
-    }
 }
 
 @media (max-width: 600px) {
     header{
         padding: 15px;
-    }
-    .inner__card--container{
-        flex-wrap: wrap;
-    }
-    .credit__card--one,
-    .credit__card--two,
-    .credit__card--three{
-        width: 100%;
-        margin: 40px 0 0 0;
-    }
-    .credit__card--one h4,
-    .credit__card--two h4,
-    .credit__card--three h4{
-        font-size: 14px;
-    }
-    .credit__card--one p,
-    .credit__card--two p,
-    .credit__card--three p{
-        font-size: 14px;
-    }
-    .credit__card h3{
-        top: 30px;
-        font-size: 14px;
-    }
-    .notification__tab--container{
-        padding: 30px;
-        width: 100%;
-    }
-    .notification__text{
-        font-size: 14px;
-        margin-left: 10px;
-        width: 75%;
     }
     .header__profile--balance p{
         font-size: 14px;
@@ -678,23 +336,21 @@ input:checked + .slider:before {
     .log__out--menu{
         padding: 10px 14px;
     }
-    .update__nav--items{
-        margin-left: 0;
-        flex-flow: column;
-        align-items: center;
-    }
-    .update__each--nav{
-        margin: 15px 0;
-    }
-    .update__each--nav:not(:last-child){
-        margin-right: 0;
-    }
-    .mail__input p{
-        margin-top: 15px;
-    }
 }
 @media (max-width: 400px) {
     .header__profile--balance span{
         margin-right: 15px;
     }
+}
+.breadcums{
+    background: #ffffff;
+    padding: 10px 14px;
+    margin: 20px;
+    border-radius: 12px;
+}
+.breadcums h3{
+    font-size: 14px;
+    font-weight: 500;
+    padding: 0;
+    margin: 0;
 }
