--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -72,6 +72,8 @@ header{
     width: 35px;
     height: 35px;
     margin-right: 20px;
+    background: #FFC107;
+    border-radius: 50%;
 }
 .header__profile--details i{
     color: var(--red-color);
@@ -145,16 +147,16 @@ header{
     top: 78px;
     background: #FFFFFF;
     border: 1px solid #F2F2F4;
-    box-shadow: 0px 30px 20px -20px rgb(198 211 232 / 20%);
-    border-radius: 10px;
+    box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.25);
+    border-radius: 12px;
     list-style: none;
     right: 30px;
     z-index: -1;
     padding: 0;
-    min-width: 250px;
+    width: 272px;
 }
 .profile__menu--container li{
-    font-family: 'Poppins';
+    font-family: 'Qanelas';
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -327,7 +329,7 @@ header{
     border-radius: 12px 12px 0 0;
     height: 100%;
     margin-right: 22px;
-    padding-top: 1px;
+    padding: 22px;
 }
 @media (max-width: 1024px) {
     header{
@@ -380,6 +382,15 @@ header{
     .header__profile--container{
         width: auto;
     }
+    .c__pr--0{
+        padding-right: 0;
+    }
+    .c__pl--0{
+        padding-left: 0;
+    }
+    .c__mb--2{
+        margin-bottom: 28px !important;
+    }
 }
 
 @media (max-width: 600px) {
@@ -420,7 +431,7 @@ header{
 .breadcums{
     background: #ffffff;
     padding: 10px 14px;
-    margin: 20px;
+    margin-bottom: 20px;
     border-radius: 12px;
 }
 .breadcums h3{
@@ -651,3 +662,122 @@ header{
     height: 100%;
     border-left: 1px solid #F6ECE1;
 }
+.dashboard__top--card{
+    width: 100%;
+    border-radius: 12px;
+    padding: 16px;
+}
+.dashboard__card--bg{
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.bg__1{
+    background-image: url("../../resources/images/backgrounds/card-bg-1.png");
+    height: 169px;
+}
+.bg__2{
+    background-image: url("../../resources/images/backgrounds/card-bg-2.png");
+    height: 169px;
+}
+.bg__3{
+    background-image: url("../../resources/images/backgrounds/card-bg-3.png");
+    height: 75px;
+    margin-bottom: 19px;
+}
+.bg__4{
+    background-image: url("../../resources/images/backgrounds/card-bg-4.png");
+    height: 75px;
+}
+.card__details--heading{
+    margin-bottom: 16px;
+}
+.card__details--bottom h2{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 34px;
+    line-height: 42px;
+    color: #FFFFFF;
+}
+.card__details--bottom h2 span img{
+    margin-left: 113px;
+    margin-top: -5px;
+}
+.card__details--bottom h3{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    color: #EDE7F6;
+}
+.details__heading--right{
+    display: flex;
+    align-items: center;
+}
+.details__heading--right p:first-child{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    color: #FFFFFF;
+    margin: 0;
+    padding-right: 26px;
+}
+.details__heading--right p:nth-child(2){
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 55px;
+    height: 30px;
+    background: #F16532;
+    border-radius: 4px;
+    padding: 0;
+    text-align: center;
+    margin: 0;
+
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    color: #FFFFFF;
+}
+.card__details--right{
+    margin-left: 14px;
+}
+.card__details--right h2{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    color: #FFFFFF;
+    margin: 0;
+}
+.card__details--right h3{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    color: #F6ECE1;
+    margin: 0;
+}
+.bg__4 .card__details--right h2{
+    color: #000000;
+}
+.bg__4 .card__details--right h3{
+    color: #9E9E9E;
+}
+
+
+
+
+
+
+
+
