--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,7 @@
 @font-face { font-family: 'Qanelas'; src: url("../fonts/QanelasSoft/QanelasSoftDEMO-UltraLight.otf"); }
 @font-face { font-family: 'Qanelas'; font-weight: bold; src: url("../fonts/QanelasSoft/QanelasSoftDEMO-ExtraBold.otf"); }
+@font-face { font-family: 'SF Pro Display'; src: url("../fonts/sf-pro/SFPRODISPLAYREGULAR.OTF"); }
+@font-face { font-family: 'Qanelas'; font-weight: bold; src: url("../fonts/sf-pro/SFPRODISPLAYBOLD.OTF"); }
 :root{
     --red-color: #F16532;
     --bg-color: #F6ECE1;
@@ -195,6 +197,10 @@ header{
     border-radius: 5px;
     padding: 10px 34px;
 }
+.log__out--menu a{
+    text-decoration: none;
+    color: inherit;
+}
 .content{
     width: 100%;
     height: 100%;
@@ -327,9 +333,9 @@ header{
 .container-layout{
     background: #f5f5ff;
     border-radius: 12px 12px 0 0;
-    height: 100%;
     margin-right: 22px;
     padding: 22px;
+    height: 100%;
 }
 @media (max-width: 1024px) {
     header{
@@ -390,6 +396,14 @@ header{
     }
     .c__mb--2{
         margin-bottom: 28px !important;
+    }
+    .account__left--menu{
+        height: 100% !important;
+        border-right: none !important;
+        border-bottom: 1px solid #EDE7F6;
+    }
+    .form__group{
+        margin-bottom: 20px;
     }
 }
 
@@ -774,10 +788,247 @@ header{
     color: #9E9E9E;
 }
 
+.footer__container{
+    background: #FFFFFF;
+    width: 100%;
+    padding: 14px 0;
+}
+.footer__menu--container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 22px;
+}
+.footer__menu--container ul{
+    padding: 0;
+    margin: 0;
+}
+.footer__menu--container ul li{
+    list-style: none;
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    color: #616161;
+}
+.footer__menu--container ul li:not(:last-child){
+    margin-right: 32px;
+}
+.copyright__container p{
+    margin: 0;
+    padding: 0;
+    font-family: auto;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    color: #757575;
+}
 
+/*          Account Setting         */
 
+.account__setting--container{
+    background: #FFFFFF;
+    border-radius: 12px;
+    min-height: 577px;
+}
+.account__heading{
+    background: #FAFAFA;
+    padding: 20px;
+    margin: 0;
 
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 28px;
+    color: #212121;
+    border-bottom: 1px solid #EDE7F6;
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
+}
+.account__card--details{
+    min-height: 400px;
+    border-bottom: 1px solid #EDE7F6;
+}
+.account__left--menu{
+    padding: 20px;
+    border-right: 1px solid #EDE7F6;
+    height: 400px;
+}
+.account__left--menu div{
+    padding: 0;
+    margin: 0;
+}
+.account__left--menu div li{
+    list-style: none;
+    padding: 12px;
+    height: 48px;
+    border-radius: 15px !important;
+    margin-bottom: 12px;
+}
+#leftNav .active{
+    background: #F6ECE1;
+}
+.account__left--menu div li{
+    text-decoration: none;
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;color: #F16532;
+    color: var(--red-color) !important;
+}
+.account__left--menu div li svg{
+    margin-right: 14px;
+}
+.account__left--menu div li:hover{
+    color: var(--red-color);
+    cursor: pointer;
+}
+.account__right--tab{
+    padding: 18px;
+}
+.right__top--container{
+    margin-left: 20px;
+}
+.account__right--top img{
+    background: #E0E0E0;
+    border-radius: 50%;
+    width: 82px;
+    height: 82px;
+    object-fit: cover;
+}
+.account__right--top{
+    display: flex;
+    align-items: center;
+}
+.right__top--details{
+    border: 2px solid #101623;
+    border-radius: 4px;
+    padding: 4px 17px;
+    margin-bottom: 0;
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #101623;
+}
+.size__limit{
+    padding: 0;
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    color: #9E9E9E;
+    margin-top: 4px;
+}
+.account__form--container{
+    margin-top: 14px;
+}
+.form__group{
+    background: #FFFFFF;
+    border: 1px solid #E7E8EC;
+    border-radius: 12px;
+    padding: 14px 16px;
+    display: flex;
+    flex-flow: column;
+    margin-bottom: 20px;
+}
+.form__group label{
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 16px;
+    color: #9E9E9E;
+}
+.form__group input{
+    border: none;
+    outline: none;
+}
+.form__group svg{
+    right: 28px;
+    bottom: 30px;
+}
+.account__action--container{
+    padding: 22px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+.cancel__btn{
+    border: 1px solid #F16532;
+    border-radius: 4px;
+    padding: 12px 16px;
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #F16532;
+    background: #ffffff;
+    margin-right: 14px;
+}
+.save__btn{
+    background: var(--red-color);
+    border: 1px solid #F16532;
+    border-radius: 4px;
+    padding: 12px 16px;
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #FFFFFF;
+}
+.account__password--strength{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: -15px;
+    margin-left: 17px;
+    margin-bottom: 20px;
+}
 
-
-
-
+.account__password--strength .bar{
+    width: 24px;
+    height: 8px;
+    background: #D84315;
+    border-radius: 7px;
+    margin-right: 8px;
+}
+.account__password--strength .bar__empty{
+    width: 24px;
+    height: 8px;
+    background: #EDE7F6;
+    border-radius: 7px;
+    margin-right: 8px;
+}
+.account__password--strength span{
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #757575;
+    padding-left: 8px;
+}
+.match__password--alert{
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    color: #D84315;
+    margin-top: -15px;
+}
+.match__password--alert svg{
+    margin-right: 5px;
+}
