--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1292,6 +1292,7 @@ header{
     border: none;
     outline: none;
     background: transparent;
+    width: 100%;
 }
 .payroll__search input::placeholder{
     font-family: 'Qanelas';
@@ -1313,6 +1314,7 @@ header{
     border-radius: 12px;
     padding: 20px;
     width: 100%;
+    overflow: hidden;
 }
 .table__heading{
     font-family: 'Qanelas';
@@ -1321,7 +1323,12 @@ header{
     font-size: 24px;
     line-height: 30px;
     color: #212121;
-    margin-bottom: 24px;
+    margin-bottom: 34px;
+}
+#all-payroll,
+#pending-payroll,
+#uploaded-payroll{
+    overflow-x: auto;
 }
 .payroll__table thead tr th{
     font-family: 'Qanelas';
@@ -1340,15 +1347,23 @@ header{
     color: #212121;
 }
 
-#all-payroll > table > tbody > tr > td:nth-child(8){
+#all-payroll > table > tbody > tr > td:nth-child(8),
+#pending-payroll > table > tbody > tr > td:nth-child(8),
+#uploaded-payroll > table > tbody > tr > td:nth-child(8){
     font-family: auto;
     color: #21212194;
 }
-#all-payroll > table > tbody > tr > td:nth-child(9){
+#all-payroll > table > tbody > tr > td:nth-child(9),
+#pending-payroll > table > tbody > tr > td:nth-child(9),
+#pending-payroll > table > tbody > tr > td:nth-child(10),
+#uploaded-payroll > table > tbody > tr > td:nth-child(9),
+#uploaded-payroll > table > tbody > tr > td:nth-child(10){
     font-family: auto;
     color: #21212194;
 }
-#all-payroll > table > tbody > tr > td:nth-child(4){
+#all-payroll > table > tbody > tr > td:nth-child(4),
+#pending-payroll > table > tbody > tr > td:nth-child(4),
+#uploaded-payroll > table > tbody > tr > td:nth-child(4){
     font-family: auto;
     color: #21212194;
 }
@@ -1365,16 +1380,105 @@ header{
     padding: 12px;
     border: 1px solid #F16532;
     border-radius: 4px;
+    cursor: pointer;
 }
 .action__btn svg{
     background: #FBD1C2;
 }
+#all-payroll > table > tbody > tr > td.d-flex > span:nth-child(2),
+#pending-payroll> table > tbody > tr > td.d-flex > span:nth-child(2),
+#uploaded-payroll> table > tbody > tr > td.d-flex > span:nth-child(2){
+    padding: 12px 14px;
+}
+#all-payroll > table > thead > tr > th > input[type=checkbox],
+#all-payroll > table > tbody > tr > td > input[type=checkbox],
+#pending-payroll > table > thead > tr > th > input[type=checkbox],
+#pending-payroll > table > tbody > tr > td > input[type=checkbox],
+#uploaded-payroll > table > thead > tr > th > input[type=checkbox],
+#uploaded-payroll > table > tbody > tr > td > input[type=checkbox]{
+    width: 17px;
+    height: 17px;
+}
+#all-payroll > table > thead,
+#pending-payroll > table > thead,
+#uploaded-payroll > table > thead{
+    position: relative;
+    bottom: 20px;
+}
 
-
-
-
-
-
+.bottom__pagination--container{
+    margin-top: 31px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.page__number{
+    height: 48px;
+    width: 252px;
+    background: #FAFAFA;
+    border-radius: 12px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.page__fill{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 3px 6px;
+    background: #F16532;
+    border-radius: 4px;
+    color: #ffffff;
+}
+#all-payroll > table > thead > tr > th,
+#all-payroll > table > tbody > tr > td,
+#pending-payroll > table > thead > tr > th,
+#pending-payroll > table > tbody > tr > td,
+#uploaded-payroll > table > thead > tr > th,
+#uploaded-payroll > table > tbody > tr > td{
+    white-space: nowrap;
+}
+.sync__payroll,
+.recent__invitation{
+    position: relative;
+}
+.payroll__sync--container,
+.invitation__recent--container{
+    padding: 15px 15px 15px 10px;
+    position: absolute;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+    left: -82px;
+    top: 52px;
+    display: flex;
+    align-items: center;
+    display: none;
+}
+.payroll__sync--container ul,
+.invitation__recent--container ul{
+    padding: 0;
+    margin: 0;
+}
+.payroll__sync--container ul li,
+.invitation__recent--container ul li{
+    list-style: none;
+    font-family: 'Qanelas';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #212121;
+}
+.sync__payroll--active,
+.recent__invitation--active{
+    display: block;
+}
+#all-payroll > table > tbody > tr,
+#pending-payroll > table > tbody > tr,
+#uploaded-payroll > table > tbody > tr{
+    vertical-align: middle;
+}
 
 
 
